--- a/assignment4.css
+++ b/assignment4.css
@@ -2,7 +2,47 @@
   Don't forget to style the results from the search!
   And anything elese you add to the application, for that matter.
 */
+a:link {
+  text-decoration: none;
+  background-size: contain;
+  color: #333;
+}
+a:hover {
+    background-color: #eee;
+    text-align: center;
+    /*width: 100%;*/
+    width: auto;
+    height: auto;
+    /*height: 60px;*/
+    padding: 0 46px 0 10px;
+    border-radius: 35px;
+    color: #333;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 26px;
 
+}
+.panel{
+  display: none;
+  white-space:pre-wrap;
+  text-align: center;
+  width: 100%;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: auto;
+  width: 100%;
+  padding: 0 46px 0 10px;
+  margin-top: 1px;
+  border-color: #888;
+  border-radius: 35px;
+  border-style: solid;
+  border-width: 5px;
+  color: #333;
+  font-family: 'Helvetica', sans-serif;
+  font-size: 26px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
 .flexsearch-wrapper {
   height: auto;
   width: auto;
